samples/bufferAccessOutOfBounds/out.txt
samples\bufferAccessOutOfBounds\bad.c:6:10: error: Array 'a[2]' accessed at index 2, which is out of bounds. [arrayIndexOutOfBounds]
        a[i] = 0;
         ^
